--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "eqseed",
   "version": "0.1.0",
+  "homepage": "https://wesleyberger.github.io/eqseed",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
